--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,10 +2,14 @@ spring:
   cloud:
     stream:
       function:
-        definition: produc
+        definition: operat
       bindings:
-        produc-out-0:
-          destination: test
+        operat-in-0:
+          destination: test2
+          content-type: application/x-protobuf
+        operat-out-0:
+          destination: test1
+          content-type: application/x-protobuf
       kafka:
         binder:
-          brokers: 127.0.0.1:9092
+          brokers: localhost:9092
